--- a/InternetShop_Dynamic/Views/Auth/SignIn.cshtml
+++ b/InternetShop_Dynamic/Views/Auth/SignIn.cshtml
@@ -32,14 +32,14 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", data_val="true", data_val_required="Password is required" } })
+                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", data_val="true", data_val_required="Password is required", type="password" } })
                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                 </div>
             </div>
     
             <div class="form-group">
                 <div class="col-md-12">
-                    <input type="submit" value="Login" class="btn btn-success btn-block" />
+                    <input type="button" value="Login" id="log_in" class="btn btn-success btn-block" />
                 </div>
             </div>
             <div class="form-group">
@@ -54,5 +54,40 @@
     <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script type="text/javascript">
+
+        function setCookie(cname, cvalue, exhours) {
+            var d = new Date();
+            d.setTime(d.getTime() + (exhours * 60 * 60 * 1000));
+            var expires = "expires=" + d.toUTCString();
+            document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        }
+
+        $(document).ready(function () {
+
+            $("#log_in").click(function () {
+                $.ajax({
+                    method: "POST",
+                    url: "/token",
+                    contentType: "application/json",
+                    data: {
+                        username: $('input[name="Email"]').val(),
+                        password: $('input[name="Password"]').val(),
+                        grant_type: 'password'
+                    },
+                    success: function (res) {
+                        setCookie('access_token', res.access_token, 3);
+                        location.href = '@Url.Action("Index", "Main", null)';
+                    },
+                    error: function (xhr, error, message) {
+                        alert("Wrong email and/or password");
+                    }
+                });
+
+            });
+
+
+        });
+    </script>
 </body>
 </html>
