--- a/InternetShop_Dynamic/Views/Shared/_Layout.cshtml
+++ b/InternetShop_Dynamic/Views/Shared/_Layout.cshtml
@@ -83,7 +83,16 @@
                         Authorization: 'Bearer ' + getCookie('access_token')
                     },
                     success: function () {
-                        document.cookie = 'access_token=; expires=Thu, 01 Jan 1970 00:00:01 GMT;';
+                        
+                        var cookies = document.cookie.split(";");
+
+                        for (var i = 0; i < cookies.length; i++) {
+                            var cookie = cookies[i];
+                            var eqPos = cookie.indexOf("=");
+                            var name = eqPos > -1 ? cookie.substr(0, eqPos) : cookie;
+                            document.cookie = name + "=;expires=Thu, 01 Jan 1970 00:00:00 GMT";
+                        }
+
                         window.location.href = '@Url.Action("Index", "Main")';
                     },
                     error: function (res) {
