--- a/InternetShop_Dynamic/Views/Main/AdminAccount.cshtml
+++ b/InternetShop_Dynamic/Views/Main/AdminAccount.cshtml
@@ -96,16 +96,27 @@
                 <div class="panel-heading">
                     <h4 class="panel-title">
                         <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-                            Collapsible Group 3
+                            Purchase List
                         </a>
                     </h4>
                 </div>
                 <div id="collapse3" class="panel-collapse collapse">
                     <div class="panel-body">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                        minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
+                        <div class="row">
+                            <table id="log">
+                                <thead>
+                                    <tr>
+                                        <th>Title</th>
+                                        <th>Items</th>
+                                        <th>Price</th>
+                                        <th>Purchase time</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="log_container">
+
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -260,6 +271,30 @@
         }
 
         $(document).ready(function () {
+
+            $.ajax({
+                method: 'GET',
+                url: '/api/Log/GetUserLog',
+                headers: {
+                    'Authorization' : 'Bearer ' + getCookie('access_token')
+                },
+                contentType: 'application/json; charset=utf-8',
+                dataType: 'json',
+                success: function (res) {
+                    
+                    for (let i = 0; i < res.length; ++i) {
+                        $("#log_container").append('<tr><td>' + res[i].Title + '</td><td>' + res[i].Items + '</td><td>' + res[i].Price + '</td><td>' + res[i].PurchaseTime + '</td></tr>');
+                    }
+
+                    $("#log").DataTable();
+
+                },
+                error: function (res) {
+                    alert(res.statusText);
+                }
+            });
+
+
             $("#goods").DataTable();
 
             $("#add_good").click(function () {
