Added mail restoration mechanism

--- a/InternetShop_Dynamic/Views/Auth/RestorePassword.cshtml
+++ b/InternetShop_Dynamic/Views/Auth/RestorePassword.cshtml
@@ -1,61 +1,74 @@
-﻿@model InternetShop_Dynamic.Models.ChangePasswordBindingModel
+﻿@model InternetShop_Dynamic.Models.RestorePasswordEntry
 
 @{
-    Layout = null;
+    ViewBag.Title = "RestorePassword";
+    Layout = "~/Views/Shared/_Layout.cshtml";
     Html.EnableClientValidation(true);
     Html.EnableUnobtrusiveJavaScript(true);
+
+    string message = ViewData.ContainsKey("message") ? ViewData["message"].ToString() : "";
 }
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Restore Password</title>
-    <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
-</head>
-<body>
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
-        <div class="form-horizontal col-sm-4 col-sm-push-4" style="border: 1px solid grey; border-radius: 5px; background-color:lightgray; padding: 10px; margin-top: 25px;">
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+<div class="row" style="margin-top: 10px;">
+    <div class="col-sm-8 col-sm-push-2" style="background-color: antiquewhite; border-radius: 5px;">
+        <form class="form-horizontal col-sm-8 col-sm-push-2" style="margin: 10px; padding: 10px;">
             <div class="form-group">
-                @Html.LabelFor(model => model.OldPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.OldPassword, new { htmlAttributes = new { @class = "form-control", data_val = "true", data_val_required = "Old password is required" } })
-                    @Html.ValidationMessageFor(model => model.OldPassword, "", new { @class = "text-danger" })
-                </div>
+                <input type="password" data-val="true" data-val-required="Please enter new password" class="form-control" name="pwd" placeholder="New password" />
             </div>
-
             <div class="form-group">
-                @Html.LabelFor(model => model.NewPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.NewPassword, new { htmlAttributes = new { @class = "form-control", data_val = "true", data_val_required = "New password is required" } })
-                    @Html.ValidationMessageFor(model => model.NewPassword, "", new { @class = "text-danger" })
-                </div>
+                <input type="password" data-val="true" data-val-required="Please enter password confirmation" class="form-control" name="confirm_pwd" placeholder="Confirm password" />
             </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.ConfirmPassword, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control", data_val = "true", data_val_required = "Password confirmation is required" } })
-                    @Html.ValidationMessageFor(model => model.ConfirmPassword, "", new { @class = "text-danger" })
-                </div>
+            <div class="form-group col-sm-4 col-sm-push-4">
+                <button type="button" id="change_pwd" class="btn btn-success btn-block">Change</button>
             </div>
+        </form>
+    </div>
+</div>
 
-            <div class="form-group">
-                <div class="col-xs-12">
-                    <input type="submit" value="Change password" class="btn btn-block btn-success" />
-                </div>
-            </div>
-        </div>
-    }
+@section scripts{
+<script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
+<script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+<script type="text/javascript">
 
-    <script type="text/javascript" src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/bootstrap.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-</body>
-</html>
+    $(document).ready(function () {
+
+        if ('@message'.length > 0) {
+            alert('@message');
+        }
+
+        $("#change_pwd").click(function () {
+
+            var pwd = $('input[name="pwd"]').val();
+            var cpwd = $('input[name="confirm_pwd"]').val();
+
+            if (pwd == "" || cpwd == "" || pwd != cpwd) {
+                alert("Wrong input");
+
+            }
+            else {
+                var toPass = {
+                    UserId: '@Model.UserId',
+                    Guid: '@Model.Guid',
+                    NewPassword: pwd,
+                    ConfirmPassword: cpwd
+                };
+
+                $.ajax({
+                    method: 'POST',
+                    url: '/api/Account/SetPassword',
+                    contentType: 'application/json; charset=utf-8',
+                    data: JSON.stringify(toPass),
+                    success: function (res) {
+                        alert("Password successfully reset");
+                        setTimeout(function () { location.href = '@Url.Action("Products", "Main")'; }, 2500);
+                    }
+                });
+            }
+
+        });
+
+    });
+
+
+</script>
+}
