--- a/InternetShop_Dynamic/Views/Auth/SignIn.cshtml
+++ b/InternetShop_Dynamic/Views/Auth/SignIn.cshtml
@@ -47,6 +47,11 @@
                     <input type="button" onclick='location.href="@Url.Action("Register", "Auth")"' value="Register" class="btn btn-info btn-block" />
                 </div>
             </div>
+            <div class="form-group">
+                <div class="col-md-12">
+                    <input type="button" onclick='location.href="@Url.Action("ChangePassword", "Auth")"' value="Change password" class="btn btn-info btn-block" />
+                </div>
+            </div>
         </div>
     }
     
