--- a/InternetShop_Dynamic/Views/Auth/Register.cshtml
+++ b/InternetShop_Dynamic/Views/Auth/Register.cshtml
@@ -80,7 +80,7 @@
             </div>
             <div class="form-group">
                 <div class="col-md-12">
-                    <input type="button" onclick='location.href="@Url.Action("Index", "Main")"' value="Main page" class="btn btn-block btn-info" />
+                    <input type="button" onclick='location.href="@Url.Action("Products", "Main")"' value="Main page" class="btn btn-block btn-info" />
                 </div>
             </div>
         </div>
